--- a/tasks.html
+++ b/tasks.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="number" name="" id="no1">
-    <input type="number" name="" id="no2">
+    <input type="number" name="salary" id="salary">
+    <input type="number" name="year of services" id="year_of_services">
     <input type="submit" value="view"  onclick="sample()">
-    <h2 id="display"></h2>
-    <script src="script.js"></script>
+    <h2 id="total"></h2>
+    <script src="task.js"></script>
 </body>
 </html>
