--- a/calculator.html
+++ b/calculator.html
@@ -8,8 +8,12 @@
 <body>
     <input type="number" name="" id="no1">
     <input type="number" name="" id="no2">
-    <input type="submit" value="view"  onclick="sample()">
+    <input type="submit" onclick="add()" value="+">
+    <input type="submit" onclick="sub()" value="-">
+    <input type="submit" onclick="mul()" value="*">
+    <input type="submit" onclick="div()" value="/">
+    <input type="submit" onclick="div()" value="%">
     <h2 id="display"></h2>
-    <script src="script.js"></script>
+    <script src="calc.js"></script>
 </body>
 </html>
