--- a/tasks.html
+++ b/tasks.html
@@ -6,10 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="number" name="salary" id="salary">
-    <input type="number" name="year of services" id="year_of_services">
-    <input type="submit" value="view"  onclick="sample()">
-    <h2 id="total"></h2>
+    <table>
+        <thead>
+            <td>ID</td>
+            <td>Name</td>
+            <td>Age</td>
+        </thead>
+        <tbody>
+
+        </tbody>   
+    </table>
+
     <script src="task.js"></script>
 </body>
 </html>
